Added dropdown navigation menu

--- a/about.html
+++ b/about.html
@@ -2,27 +2,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1920, initial-scale=1.0">
-  <link rel="stylesheet" href="style/main.css">
+  <link rel="stylesheet" href="style/static.css">
   <title>ОНУ | КН | Про спеціальність</title>
 </head>
 <body>
   <header>
-    <div class="nav-bar">
+    <div class="navbar">
       <a href="./index.html"><img src="img/logo.png" alt="logo"></a>
       <nav>
           <ul>
-              <li><a href="./about.html">Про спеціальність</a></li>
-              <li><a href="./academics.html">Навчання</a></li>
-              <li><a href="./research.html">Наука</a></li>
-              <li><a href="./news.html">Новини</a></li>
-              <li><a href="./contact.html">Зворотній зв'язок</a></li>
+              <li>
+                <a href="./about.html">
+                  <h3>Про спеціальність</h3>
+                </a>
+              </li>
+              <li>
+                <a href="./academics.html">
+                  <h3>Навчання</h3>
+                </a>
+              </li>
+              <li>
+                <a href="./research.html">
+                  <h3>Наука</h3>
+                </a>
+              </li>
+              <li>
+                <a href="./news.html">
+                  <h3>Новини</h3>
+                </a>
+              </li>
+              <li>
+                <a href="./contact.html">
+                  <h3>Зворотній зв'язок</h3>
+                </a>
+              </li>
           </ul>
       </nav>
     </div>
   </header> 
 
   <main>
-    <div class="about-main-section">
+    <div class="about-container">
       <h1>Про спеціальність</h1>
       <div class="about-main-text">Щось цікаве...</div>
     </div>
