--- a/research.html
+++ b/research.html
@@ -2,12 +2,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1920, initial-scale=1.0">
-  <link rel="stylesheet" href="style/main.css">
+  <link rel="stylesheet" href="style/static.css">
   <title>ОНУ | КН | Наука</title>
 </head>
 <body>
   <header>
-    <div class="nav-bar">
+    <div class="navbar">
       <a href="./index.html"><img src="img/logo.png" alt="logo"></a>
       <nav>
           <ul>
@@ -22,7 +22,7 @@
   </header> 
 
   <main>
-    <div class="research-main-section">
+    <div class="research-container">
       <h1>Наука</h1>
       <div class="research-main-text">Щось цікаве...</div>
     </div>
