Small changes (added welcome msg)

--- a/index.html
+++ b/index.html
@@ -1,117 +1,143 @@
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=1920, initial-scale=1.0">
-  <link rel="stylesheet" href="style/static.css">
-  <link rel="stylesheet" href="style/dynamic.css">
-  <title>ОНУ | Комп'ютерні науки</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=1920, initial-scale=1.0">
+    <link rel="stylesheet" href="style/static.css">
+    <link rel="stylesheet" href="style/dynamic.css">
+    <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
+    <title>ОНУ | Комп'ютерні науки</title>
 </head>
+
 <body>
-  <header>
-    <div class="navbar">
-      <a href="./index.html"><img src="img/logo.png" alt="logo"></a>
-      <nav>
-          <ul>
-              <li>
-                <a href="./about.html">
-                  <h3>Про спеціальність</h3>
-                </a>
-                <div class="dropdown-menu">
-                  <div class="row">
-                    <div class="col">
-                      <h3>Заголовок 1</h3>
-                      <ul>
-                        <li>Пункт 1</li>
-                      </ul>
-                    </div>
-                    <div class="col">
-                      <h3>Заголовок 2</h3>
-                      <ul>
-                        <li>Пункт 2</li>
-                      </ul>
-                    </div>
-                    <div class="col">
-                      <h3>Заголовок 3</h3>
-                      <ul>
-                        <li>Пункт 3</li>
-                      </ul>
-                    </div>
-                  </div>
+    <header>
+        <div class="navbar">
+            <a href="./index.html"><img src="img/logo.png" alt="logo"></a>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="./about.html">
+                            <h3>Про спеціальність</h3>
+                        </a>
+                        <div class="dropdown-menu">
+                            <div class="row">
+                                <div class="col">
+                                    <h3>Заголовок 1</h3>
+                                    <ul>
+                                        <li>Пункт 1</li>
+                                    </ul>
+                                </div>
+                                <div class="col">
+                                    <h3>Заголовок 2</h3>
+                                    <ul>
+                                        <li>Пункт 2</li>
+                                    </ul>
+                                </div>
+                                <div class="col">
+                                    <h3>Заголовок 3</h3>
+                                    <ul>
+                                        <li>Пункт 3</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="./academics.html">
+                            <h3>Навчання</h3>
+                        </a>
+                        <div class="mega-menu"></div>
+                    </li>
+                    <li>
+                        <a href="./research.html">
+                            <h3>Наука</h3>
+                        </a>
+                        <div class="mega-menu"></div>
+                    </li>
+                    <li>
+                        <a href="./news.html">
+                            <h3>Новини</h3>
+                        </a>
+                        <div class="mega-menu"></div>
+                    </li>
+                    <li>
+                        <a href="./contact.html">
+                            <h3>Зворотній зв'язок</h3>
+                        </a>
+                        <div class="mega-menu"></div>
+                    </li>
+                </ul>
+            </nav>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div class="block-container">
+            <section id="welcome" class="section">
+                <div>
+                    <h1>Ласкаво просимо!</h1>
+                    <p>
+                        Ви знаходитесь на офіційному сайті спеціальності <strong>122 "Комп'ютерні науки"</strong> Одеського національного університету імені І. І. Мечникова!
+                        Тут Ви можете знайти інформацію як про <em>саму спеціальність</em>, так і про <em>навчання</em>, <em>умови вступу</em>, <em>події</em>, <em>дослідження</em>, <em>дозвілля студентів</em> та інші цікавості, що стосуються неї.</p>
                 </div>
-              </li>
-              <li>
-                <a href="./academics.html">
-                  <h3>Навчання</h3>
-                </a>
-                <div class="mega-menu"></div>
-              </li>
-              <li>
-                <a href="./research.html">
-                  <h3>Наука</h3>
-                </a>
-                <div class="mega-menu"></div>
-              </li>
-              <li>
-                <a href="./news.html">
-                  <h3>Новини</h3>
-                </a>
-                <div class="mega-menu"></div>
-              </li>
-              <li>
-                <a href="./contact.html">
-                  <h3>Зворотній зв'язок</h3>
-                </a>
-                <div class="mega-menu"></div>
-              </li>
-          </ul>
-      </nav>
-      </nav>
-    </div>
-  </header> 
+            </section>
 
-  <main>
-    <div class="block-container">
-        <div class="block about">
-          <h1>Про спеціальність</h1>
-          <div class="homepage-description">
-            Invidunt lorem invidunt et erat justo ipsum.
-            Rebum gubergren et diam tempor ipsum et eos.
-            Et takimata ut duo lorem et sit est ut voluptua, sed ipsum takimata nonumy amet.
-            Sit ut justo gubergren et amet sadipscing et.
-          </div>
+            <section id="about" class="section">
+                <div>
+                    <h1>Про спеціальність</h1>
+                    <div class="homepage-description">
+                        Invidunt lorem invidunt et erat justo ipsum.
+                        Rebum gubergren et diam tempor ipsum et eos.
+                        Et takimata ut duo lorem et sit est ut voluptua, sed ipsum takimata nonumy amet.
+                        Sit ut justo gubergren et amet sadipscing et.
+                    </div>
+                </div>
+            </section>
+
+            <section id="academics" class="section">
+                <div>
+                    <h1>Навчання</h1>
+                    <div class="homepage-description">
+                        Duo aliquyam magna eirmod amet justo est clita duo.
+                        Vero sea amet duo ut, erat eos rebum sed sanctus lorem.
+                    </div>
+                </div>
+            </section>
+
+
+            <section id="research" class="section">
+                <div>
+                    <h1>Напрямки дослідження</h1>
+                    <div class="homepage-description">
+                        Clita aliquyam sadipscing ut takimata ut vero dolore sanctus diam, accusam ipsum justo labore eirmod
+                        amet
+                        gubergren, sadipscing sanctus lorem.
+                    </div>
+                </div>
+            </section>
+
+            <section id="departments" class="section">
+                <div>
+                    <h1>Кафедри</h1>
+                    <div class="homepage-description">
+                        Et kasd dolore voluptua lorem aliquyam labore rebum, dolores sadipscing ea takimata rebum lorem.
+                        Ipsum et eirmod sed kasd dolor.
+                    </div>
+                </div>
+            </section>
+
+            <section id="news" class="section">
+                <div>
+                    <h1>Останні новини</h1>
+                </div>
+            </section>
         </div>
+    </main>
 
-        <div class="block programs">
-          <h1>Навчальні програми</h1>
-          <div class="homepage-description">
-            Duo aliquyam magna eirmod amet justo est clita duo.
-            Vero sea amet duo ut, erat eos rebum sed sanctus lorem.
-          </div>
-        </div>
-
-        <div class="block research">
-          <h1>Напрямки дослідження</h1>
-          <div class="homepage-description">
-            Clita aliquyam sadipscing ut takimata ut vero dolore sanctus diam, accusam ipsum justo labore eirmod amet gubergren, sadipscing sanctus lorem.
-          </div>
-        </div>
-
-        <div class="block departments">
-          <h1>Кафедри</h1>
-          <div class="homepage-description">
-            Et kasd dolore voluptua lorem aliquyam labore rebum, dolores sadipscing ea takimata rebum lorem.
-            Ipsum et eirmod sed kasd dolor.
-          </div>
-        </div>
-
-        <div class="block news">
-          <h1>Останні новини</h1>
-        </div>
-    </div>
-  </main>
-
-  <footer>
-    <!-- Contact Info -->
-  </footer>
+    <footer>
+        <!-- Contact Info -->
+    </footer>
 </body>
+
 </html>
