Add some animations & some minor improvements

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=1920, initial-scale=1.0">
     <link rel="stylesheet" href="style/static.css">
     <link rel="stylesheet" href="style/dynamic.css">
+    <link rel="stylesheet" href="style/animation.css">
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
     <title>ОНУ | Комп'ютерні науки</title>
 </head>
 
-<body>
+<body class="animate__animated animate__fadeInUpBig">
     <header>
         <div class="navbar">
             <a href="./index.html"><img src="img/logo.png" alt="logo"></a>
@@ -19,27 +20,27 @@
                         <a href="./about.html">
                             <h3>Про спеціальність</h3>
                         </a>
-                        <div class="dropdown-menu">
-                            <div class="row">
-                                <div class="col">
+                        <div class="dropdown-menu" id="dropdown-menu">
+                            <ul class="row">
+                                <li class="col">
                                     <h3>Заголовок 1</h3>
                                     <ul>
                                         <li>Пункт 1</li>
                                     </ul>
-                                </div>
-                                <div class="col">
+                                </li>
+                                <li class="col">
                                     <h3>Заголовок 2</h3>
                                     <ul>
                                         <li>Пункт 2</li>
                                     </ul>
-                                </div>
-                                <div class="col">
+                                </li>
+                                <li class="col">
                                     <h3>Заголовок 3</h3>
                                     <ul>
                                         <li>Пункт 3</li>
                                     </ul>
-                                </div>
-                            </div>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li>
@@ -139,5 +140,5 @@
         <!-- Contact Info -->
     </footer>
 </body>
-
+    <script src="./scripts/index.js"></script>
 </html>
